NAGPAssignment/manifests/db-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sql-server-pod
  namespace: applicationnamespace
spec:
  volumes:
    - name: mssqldb
      persistentVolumeClaim:
        claimName: mssql-data
  containers:
    - name: sql-server
      image: mcr.microsoft.com/mssql/server:2019-latest
      ports:
        - containerPort: 1433
      volumeMounts:
        - name: mssqldb
          mountPath: /var/opt/mssql
